# tk-app-framework

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/tk_app_framework/: __init__.py  _error.py  _log.py  _misc.py  _shutdown.py  _string_util.py  app_entry.py  base_app.py  base_comm.py  callback.py  error_report_dialog.py  tooltip.py
tests/: test_smoke.py
