[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tk-app-framework"
version = "0.1.0"
description = "Shared Tkinter base apps, progress/update dialogs, and entry helpers"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.8"
authors = [{ name = "oldrepublicwizard" }]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/oldrepublicwizard/tk-app-framework"
Repository = "https://github.com/oldrepublicwizard/tk-app-framework"

[tool.setuptools.packages.find]
where = ["src"]
